nixidy/generated/prod/bazarr/Deployment-bazarr.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    app.kubernetes.io/controller: bazarr
    app.kubernetes.io/instance: bazarr
    app.kubernetes.io/managed-by: Helm
    app.kubernetes.io/name: bazarr
  name: bazarr
  namespace: media
spec:
  replicas: 1
  revisionHistoryLimit: 3
  selector:
    matchLabels:
      app.kubernetes.io/controller: bazarr
      app.kubernetes.io/instance: bazarr
      app.kubernetes.io/name: bazarr
  strategy:
    type: Recreate
  template:
    metadata:
      labels:
        app.kubernetes.io/controller: bazarr
        app.kubernetes.io/instance: bazarr
        app.kubernetes.io/name: bazarr
    spec:
      automountServiceAccountToken: false
      containers:
        - image: ghcr.io/home-operations/bazarr:1.5.6@sha256:79fc37491f55c7e24427bcd669bce3df2d7415ca432a47ce9d53cc5988af8411
          livenessProbe:
            failureThreshold: 3
            initialDelaySeconds: 0
            periodSeconds: 10
            tcpSocket:
              port: 6767
            timeoutSeconds: 1
          name: bazarr
          readinessProbe:
            failureThreshold: 3
            initialDelaySeconds: 0
            periodSeconds: 10
            tcpSocket:
              port: 6767
            timeoutSeconds: 1
          startupProbe:
            failureThreshold: 60
            initialDelaySeconds: 0
            periodSeconds: 10
            tcpSocket:
              port: 6767
            timeoutSeconds: 1
          volumeMounts:
            - mountPath: /config
              name: config
            - mountPath: /media/movies
              name: media-movies
              readOnly: true
            - mountPath: /media/tv
              name: media-tv
              readOnly: true
            - mountPath: /config/cache
              name: tmpfs
              subPath: cache
            - mountPath: /config/log
              name: tmpfs
              subPath: log
            - mountPath: /tmp
              name: tmpfs
              subPath: tmp
      dnsPolicy: ClusterFirst
      enableServiceLinks: false
      hostIPC: false
      hostNetwork: false
      hostPID: false
      securityContext:
        fsGroup: 65534
        fsGroupChangePolicy: OnRootMismatch
        runAsGroup: 65534
        runAsUser: 65534
      serviceAccountName: bazarr
      volumes:
        - name: config
          persistentVolumeClaim:
            claimName: bazarr
        - name: media-movies
          persistentVolumeClaim:
            claimName: media-movies
        - name: media-tv
          persistentVolumeClaim:
            claimName: media-tv
        - emptyDir: {}
          name: tmpfs
